# ai_commit_cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: homebrew-test.yml  release.yml  rust.yml
Formula/: ai_commit_cli.rb
src/: config.rs  editor.rs  language.rs  main.rs  tests.rs
src/api/: claude.rs  gemini.rs  mod.rs  openai.rs
