[package]
name = "ai_commit_cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "aic"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] } # 非同期ランタイム
reqwest = { version = "0.12", features = ["json"] } # HTTPクライアント
serde = { version = "1.0", features = ["derive"] } # シリアライズ/デシリアライズ
serde_json = "1.0" # JSONの処理
dotenv = "0.15" # .envファイルから環境変数を読み込む
anyhow = "1.0" # エラーハンドリングを簡単にする
clap = { version = "4.5", features = ["derive"] } # コマンドライン引数のパース
dirs = "5.0" # ホームディレクトリなどの特殊なディレクトリを取得する

[dev-dependencies]
mockito = "1.2.0" # HTTP APIのモック
